Added SearchBar  to NavigationBar component, got rid of Header componenent in previous Landing component

--- a/backend/frontend/src/components/Posts/Post.css
+++ b/backend/frontend/src/components/Posts/Post.css
@@ -25,6 +25,7 @@
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out;
 }
+*/
 .float-on-hover:hover, .float-on-hover:focus, .float-on-hover:active {
 transform: scale(1.02);
-} */
+} 
