--- a/backend/frontend/src/components/Landing/Landing.css
+++ b/backend/frontend/src/components/Landing/Landing.css
@@ -20,7 +20,7 @@ body {
 
 #categories-container {
   /* width: 20%; */
-  min-width: 200px;
+  min-width: 265px;
   box-sizing: border-box;
   justify-content: left;
   /* display: flex; */
@@ -33,6 +33,7 @@ body {
   /* margin-top: 66.2px; */
   height: 100%;
   padding-left: 10px;
+  z-index: 1;
 }
 #price-select-container {
   border-bottom: 1px solid darkgray;
@@ -51,16 +52,23 @@ body {
 #right-side-container {
   background-color: rgb(233, 233, 233);
   margin-left: 265.4px;
+  flex: 1;
 }
+
 #posts-container {
-  display: grid;
-  justify-content: center;
   align-items: center;
   min-width: 400px;
   overflow-y: auto;
   width:100%;
   flex:1;
+  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+  max-width: 1100px;
+  display: grid;
+  /* gap: px;  */
+  justify-content: center; 
+  margin: 0 auto; 
 }
+
 #pagination-container {
   /* padding-left: 1%; */
   width: 100%;
@@ -70,25 +78,25 @@ body {
   height: 80px;
 }
 
-  /* Styles for small screens (up to 600px wide) */
-  @media only screen and (max-width: 700px) {
+
+  /* @media only screen and (max-width: 800px) {
     #posts-container {
       grid-template-columns: repeat(2, auto);
     }
   }
 
-  @media only screen and (min-width: 701px) and (max-width: 800px) {
+  @media only screen and (min-width: 1001px) and (max-width: 1150px) {
     #posts-container {
       grid-template-columns: repeat(3, auto);
     }
   }
 
-  /* Styles for medium screens (601px to 900px wide) */
-  @media only screen and (min-width: 801px)  {
+
+  @media only screen and (min-width: 1151px)  {
     #posts-container {
       grid-template-columns: repeat(4, auto);
-    }
-  }
+    } 
+  } */
 
 
 
