--- a/backend/frontend/src/components/Posts/Post.css
+++ b/backend/frontend/src/components/Posts/Post.css
@@ -10,7 +10,7 @@
 
 .post-images {
     width: 100%;
-    height: 100%;
+    height: 70%;
 }
 
 /* .float-on-hover {
@@ -27,5 +27,11 @@
 }
 */
 .float-on-hover:hover, .float-on-hover:focus, .float-on-hover:active {
-transform: scale(1.02);
+    transform: scale(1.02);
+    -webkit-transition-duration: 0.25s;
+    transition-duration: 0.25s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
 } 
