--- a/backend/frontend/src/components/Posts/Post.css
+++ b/backend/frontend/src/components/Posts/Post.css
@@ -4,9 +4,13 @@
     align-items: center;
     justify-content: center;
     background-color: white;
-    text-align: center;
+    /* text-align: center; */
+
 }
 
+.post-text {
+    padding-left: 5px;
+}
 
 .post-images {
     width: 100%;
