--- a/backend/frontend/src/components/ItemPage/ItemPage.css
+++ b/backend/frontend/src/components/ItemPage/ItemPage.css
@@ -12,28 +12,55 @@
 }
 
 #item-page-image-container {
-    height: 100vh;
+    /* margin-top: 60px; */
+    height: 90vh;
     align-items: center;
     justify-content: center;
-    transform: translateY(-60px);
+    /* transform: translateY(-60px); */
     width: 40%;
     display: flex;
-    
+    margin-left:10%;
 }
 
 #item-info-container {
+    flex-direction: column;
+    display: flex;
     align-items: center;
     justify-content: center;
-    width: 59%;
-    height: 100vh;
+    width: 40%;
+    height: 90vh;
+    margin-right: 10%;
 }
 
 #item-description-container {
+    align-items: center;
+    justify-content: center;
     background-color: white;
-    min-height: 500px;
-    margin-right: 25px;
-    margin-top: 60px;
+    height: 70%;
+    width: 90%;
+    /* margin-right: 25px; */
+    /* margin-top: 60px; */
     padding: 15px;
+}
+
+
+
+.message-seller-container {
+    height:60px;
+    width:90%;
+    background-color: white;
+}
+
+.message-seller {
+    position:absolute;
+    bottom: 20;
+    left: 20;
+    background-color: #0098dc;
+    line-height: 50px;
+    padding-left: 5px;
+    padding-right: 5px;
+    color: white;
+    margin-left: 15px;
 }
 
 
