--- a/backend/frontend/src/components/Landing/Landing.css
+++ b/backend/frontend/src/components/Landing/Landing.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   min-width: 700px;
-}
+} */
 #landing-page {
   width: 100%;
 }
@@ -53,20 +53,22 @@ body {
   background-color: rgb(233, 233, 233);
   margin-left: 265.4px;
   flex: 1;
+  min-height: 90vh;
 }
 
 #posts-container {
-  align-items: center;
-  min-width: 400px;
+  /* align-items: center; */
+  /* min-width: 400px; */
   overflow-y: auto;
   width:100%;
   flex:1;
-  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   max-width: 1100px;
   display: grid;
   /* gap: px;  */
   justify-content: center; 
   margin: 0 auto; 
+  margin-top: 10px;
 }
 
 #pagination-container {
@@ -79,12 +81,23 @@ body {
 }
 
 
-  /* @media only screen and (max-width: 800px) {
-    #posts-container {
-      grid-template-columns: repeat(2, auto);
+
+
+   @media only screen and (max-width: 1000px) {
+    #right-side-container {
+      margin-left: 0px;
+    }
+    #categories-container {
+      display: none;
+    }
+    #price-select-container {
+      display: none;
+    }
+    #category-select-container {
+      display: none;
     }
   }
-
+/*
   @media only screen and (min-width: 1001px) and (max-width: 1150px) {
     #posts-container {
       grid-template-columns: repeat(3, auto);
