--- a/backend/frontend/src/components/Posts/Post.css
+++ b/backend/frontend/src/components/Posts/Post.css
@@ -1,6 +1,6 @@
 .post {
     border: 2px solid #61dafb;
-    margin: 10%;
+    margin: 5%;
     align-items: center;
     justify-content: center;
     background-color: white;
@@ -10,12 +10,22 @@
 
 .post-text {
     padding-left: 5px;
-    padding-top:8px;
+    padding-top:1px;
+}
+
+.post-container {
+    height: 300px;
+}
+.post-images-container {
+    width: 100%;
+    height: 70%;
+    overflow: hidden;
 }
 
 .post-images {
     width: 100%;
-    height: 70%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* .float-on-hover {
