--- a/backend/frontend/src/CSS/MyAccount.css
+++ b/backend/frontend/src/CSS/MyAccount.css
@@ -48,11 +48,16 @@ button[type="submit"] {
   padding: 20px;
 }
 
-.name-fields {
+.form-row {
   display: flex;
   justify-content: space-between;
 }
 
-.half-width {
-  width: 48%; /* Adjust the width as necessary */
+.form-group.half-width {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.form-group.half-width:last-child {
+  margin-right: 0;
 }
