Committing in order to pull from main, no major changes

--- a/backend/frontend/src/components/Landing/Landing.css
+++ b/backend/frontend/src/components/Landing/Landing.css
@@ -24,7 +24,7 @@
   box-sizing: border-box;
   justify-content: left;
   /* display: flex; */
-  background-color: lightgray;
+  background-color: rgb(220,220,220);
   border-right: 2px solid white;
   overflow: hidden;
   padding-left: 10px;
