--- a/backend/frontend/src/components/CategorySelect/CategorySelect.css
+++ b/backend/frontend/src/components/CategorySelect/CategorySelect.css
@@ -14,11 +14,12 @@
     display: inline-block;
     width: 20px; /* Adjust width as needed */
     height: 20px; /* Adjust height as needed */
-    border: 2px solid #000; /* Black border */
+    border: 1px solid #000; /* Black border */
     background-color: transparent; /* Transparent background */
     cursor: pointer; /* Set cursor to pointer */
     margin-right: 6px;
     transform: translateY(3px);
+    margin-top:8px;
 }
 
 .custom-checkbox-input:checked + .custom-checkbox-label::after {
