Added styling changes to item page

--- a/backend/frontend/src/components/App.css
+++ b/backend/frontend/src/components/App.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    /* font-weight: <weight>; */
+    font-weight: 500;
     font-style: normal;
 }
