--- a/backend/frontend/src/components/PriceSelect/PriceSelect.css
+++ b/backend/frontend/src/components/PriceSelect/PriceSelect.css
@@ -12,20 +12,20 @@
     margin-bottom: 10px;
     padding: 5px;
     border: 1px solid #ccc;
-    border-radius: 3px;
+    border-radius: 5px;
   }
   
   .price-select-container button {
     padding: 5px 10px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: rgb(204, 238, 249);
+    color:  rgb(61, 150, 227);
     border: none;
     border-radius: 3px;
     cursor: pointer;
   }
   
   .price-select-container button:hover {
-    background-color: #0056b3;
+    background-color: lightblue;
   }
 
   .button-container {
@@ -35,5 +35,3 @@
   .button-container button {
     margin-left: 25px; /* Add some spacing between buttons */
   }
-  
-  
