--- a/backend/frontend/src/components/MyListings/MyListings.css
+++ b/backend/frontend/src/components/MyListings/MyListings.css
@@ -1,6 +1,45 @@
-/* body {
-    background-color: rgb(233, 233, 233);
+
+.listing-row {
+    margin-bottom: 20px;
 }
-#my-listing-container{
-    background-color: rgb(233, 233, 233);
-} */
+
+.listing-card {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.listing-img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.listing-details {
+    padding: 10px;
+}
+
+.listing-title {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.listing-price {
+    font-size: 20px;
+    font-weight: bold;
+    color: #009688; 
+    margin-bottom: 10px;
+}
+
+.listing-category {
+    font-size: 17px;
+    color: #555;
+    margin-bottom: 10px;
+}
+
+.listing-description {
+    font-size: 17px;
+    color: #777;
+}
