--- a/backend/frontend/src/CSS/styles.css
+++ b/backend/frontend/src/CSS/styles.css
@@ -60,6 +60,11 @@
 }
 
 .listing-container{
-    margin: 4rem;
+    margin: 10px;
     border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    padding-top:10px;
+    padding-bottom: 3px;
 }
